kubedefs/appingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vpro-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    name: vpro-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: vprofile.hkhinfoteck.xyz
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: vproapp-service
            port: 
              number: 8080
